# madgraph4gpu

./: .clang-format  .gitattributes  .gitignore  .gitmodules  README.md  raplab_setup.sh  setup_daint.sh  setup_raplab.sh
.github/: CODEOWNERS
.github/workflows/: a100_profiler.yml  archiver.py  archiver.sh  archiver.yml  c-cpp.yml  cudaProfiler.yml  cuda_A100_Profiler  cuda_A100_Profiler.yml  generate_madtrex_assets.py  madgraph_launch_test.yml  madtrex_common.py  manual.sh  manual.yml  mi250x_profiler.yml  newissues2lounge.yml  profiler.yml  run_madtrex.py  sycl.yml  syclProfiler.yml  sycl_A100_Profiler  sycl_A100_Profiler.yml  (+6 more)
MG5aMC/: .gitignore
epoch0/cpp/ee_mumu/: CMakeLists.txt  README.md
epoch0/cpp/ee_mumu/SubProcesses/P1_Sigma_sm_epem_mupmum/: CPPProcess.cc
epoch0/cpp/ee_mumu/SubProcesses/P1_Sigma_sm_epem_mupmum/callgrind/: callgrind.out.run1.100000000evt  callgrind.out.run1.10000000evt  callgrind.out.run1.1000000evt  callgrind.out.run1.10000evt  callgrind.out.run1.10evt  callgrind.out.run1.1evt
epoch0/cpp/ee_mumu/src/: HelAmps_sm.cc  Parameters_sm.cc  Parameters_sm.h  read_slha.cc
epoch1/sycl/ee_mumu/: CMakeLists.txt
epoch1/sycl/ee_mumu/SubProcesses/: Makefile
epoch1/sycl/ee_mumu/SubProcesses/P1_Sigma_sm_epem_mupmum/: CPPProcess.cc  CPPProcess.h  check.cc  gcheck.cu
epoch1/sycl/ee_mumu/src/: Parameters_sm.h  mgOnGpuConfig.h  rambo.cc  rambo.h
epoch2/sycl/gg_ttgg/: CMakeLists.txt
epoch2/sycl/gg_ttgg/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.cc  CPPProcess.h  CommonRandomNumbers.h  Memory.h  check_sa.cc
epoch2/sycl/gg_ttgg/src/: HelAmps_sm.cc  HelAmps_sm.h  Parameters_sm.cc  Parameters_sm.h  extras.cc  extras.h  mgOnGpuConfig.h  mgOnGpuTypes.h
epochX/cudacpp/CODEGEN/PLUGIN/CUDACPP_SA_OUTPUT/madgraph/iolibs/template_files/CMake/: CMakeLists.txt  Compilers.txt  Macros.txt  Platforms.txt
epochX/cudacpp/CODEGEN/PLUGIN/CUDACPP_SA_OUTPUT/madgraph/iolibs/template_files/CMake/SubProcesses/: CMakeLists.txt  CMakeLists_P.txt
epochX/cudacpp/CODEGEN/PLUGIN/CUDACPP_SA_OUTPUT/madgraph/iolibs/template_files/CMake/src/: CMakeLists.txt
epochX/cudacpp/gg_tt.sa/: .gitignore  CMakeLists.txt  CODEGEN_cudacpp_gg_tt_log.txt  mg5.in
epochX/cudacpp/gg_tt.sa/CMake/: Compilers.txt
epochX/cudacpp/gg_tt.sa/SubProcesses/: Bridge.h  BridgeKernels.cc  CMakeLists.txt  CrossSectionKernels.cc  CurandRandomNumberKernel.cc  GpuAbstraction.h  HelAmps.cc  MadgraphTest.h  MatrixElementKernels.cc  MatrixElementKernels.h  MemoryAccessCouplings.h  MemoryAccessGs.h  MemoryAccessMatrixElements.h  MemoryAccessMomenta.h  MemoryAccessNumerators.h  MemoryBuffers.h  RamboSamplingKernels.cc  RamboSamplingKernels.h  cudacpp.mk  cudacpp_overlay.mk  fsampler.cc  nvtx.h  ompnumthreads.h  runTest.cc  testmisc.cc  testxxx.cc
epochX/cudacpp/gg_tt.sa/SubProcesses/P1_Sigma_sm_gg_ttx/: CPPProcess.cc  CPPProcess.h  check_sa.cc  color_sum.cc  diagrams.h  diagrams1.cc  epoch_process_id.h
epochX/cudacpp/gg_tt.sa/src/: COPYRIGHT  HelAmps_sm.h  Parameters_sm.cc  Parameters_sm.h  cudacpp_src.mk  gParameters_sm.cu  mgOnGpuConfig.h  mgOnGpuCxtypes.h  mgOnGpuFptypes.h  mgOnGpuVectors.h  rambo.h  read_slha.cc
epochX/cudacpp/gg_tt.sa/test/: cudacpp_test.mk
epochX/cudacpp/gg_tt.sa/test/ref/: dump_CPUTest.Sigma_sm_gg_ttx.txt2
epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/: CMakeLists.txt  CPPProcess.cc  CPPProcess.h  MemoryAccessWavefunctions.h  auto_dsig.f  auto_dsig1.f  color_sum.cc  coloramps.h  diagrams.h  diagrams1.cc  diagrams_header.h  dname.mg  driver.f  epoch_process_id.h  matrix1.f  matrix1.ps  props.inc  symperms.inc
epochX/cudacpp/susy_gg_tt.sa/src/: CMakeLists.txt  HelAmps_MSSM_SLHA2.h  Parameters_MSSM_SLHA2.cc  Parameters_MSSM_SLHA2.h  constexpr_math.h  cudacpp_src.mk  mgOnGpuConfig.h  mgOnGpuCxtypes.h
epochX/kokkos/CODEGEN/PLUGIN/KOKKOS_SA_OUTPUT/madgraph/iolibs/template_files/CMake/: CMakeLists.txt
epochX/kokkos/CODEGEN/PLUGIN/KOKKOS_SA_OUTPUT/madgraph/iolibs/template_files/CMake/SubProcesses/: CMakeLists_P.txt
epochX/kokkos/CODEGEN/PLUGIN/KOKKOS_SA_OUTPUT/madgraph/iolibs/template_files/CMake/src/: CMakeLists.txt
epochX/kokkos/ee_mumu.mad/SubProcesses/P1_ll_ll/: CMakeLists.txt  CPPProcess.cc  CPPProcess.h  auto_dsig.f  auto_dsig1.f  get_color.f
epochX/sycl/gg_ttgg/: CMakeLists.txt  CODEGEN_sycl_gg_ttgg_log.txt
epochX/sycl/gg_ttgg/SubProcesses/: Makefile  Memory.h  MemoryAccess.h  timermap.h
epochX/sycl/gg_ttgg/SubProcesses/P1_Sigma_sm_gg_ttxgg/: CPPProcess.cc  CPPProcess.h  check_sa.cc
epochX/sycl/gg_ttgg/src/: HelAmps_sm.cc  HelAmps_sm.h  Makefile  Parameters_sm.cc  Parameters_sm.h  extras.h  mgOnGpuConfig.h  mgOnGpuTypes.h  mgOnGpuVectors.h  rambo.h  read_slha.h
examples/gpu/eemumu_AV/: CMakeLists.txt
examples/gpu/eemumu_AV/SubProcesses/: Makefile
examples/gpu/eemumu_AV/SubProcesses/P1_Sigma_sm_epem_mupmum/: CPPProcess.cc  CPPProcess.cu  CPPProcess.h  check.cc  check_sa.cu  gCPPProcess.cu  nvtx.h  profile.sh  timermap.h
examples/gpu/eemumu_AV/SubProcesses/P1_Sigma_sm_epem_mupmum/perf/: perf.py
examples/gpu/eemumu_AV/SubProcesses/P1_Sigma_sm_epem_mupmum/perf/data/: 20200404-perf-test-run1.json
examples/gpu/eemumu_AV/src/: HelAmps_sm.cu  HelAmps_sm.h  Makefile  Random.cc  Random.h  grambo2toNm0.cu  mg5Complex.h  mgOnGpuConfig.h  mgOnGpuTypes.h  rambo.cc  rambo.h  rambo2toNm0.cc  rambo2toNm0.h  read_slha.cc  read_slha.h  vrambo.cc  vrambo.h
examples/standalone_cpp/eemumu/: CMakeLists.txt
examples/standalone_cpp/eemumu/SubProcesses/: Makefile  check_sa.cpp
examples/standalone_cpp/eemumu/SubProcesses/P1_Sigma_sm_epem_mupmum/: CPPProcess.cc  CPPProcess.h
examples/standalone_cpp/eemumu/SubProcesses/P1_Sigma_sm_epem_mupmum/callgrind/: callgrind.out.run1.100000evt  callgrind.out.run1.1000evt  callgrind.out.run1.100evt
examples/standalone_cpp/eemumu/src/: HelAmps_sm.cc  HelAmps_sm.h  Makefile  Parameters_sm.cc  Parameters_sm.h  extras.cc  extras.cpp  extras.h  rambo.cc  rambo.h  read_slha.cc  read_slha.h
test/: Makefile  makefile  ref
tools/: Makefile  ccacheMerge.sh  gpuprops.cu  plotwavedep.py  setup_daint.sh  setup_raplab.sh
(+9237 files in other folders)
